--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -1,43 +1,79 @@
-* {
-    border: 1px solid red;
-}
+
 html {
-    background-color:#FAFFFF;
+    background:linear-gradient(to right, #a86b14, #c28d47);
     padding:0;
     margin:0;
 }
 
 body {
-    padding-top:7em;
+    padding-top:4em;
+    padding-left:2em;
     margin:0;
 }
 
+/* Style the header with a grey background and some padding */
 header {
-    width:100%;
-    height:5em;
-    position:absolute;
-    top:0;
-    margin-top:0;
-    display:flex;
-    background-color:#222222;
-    border-bottom:1px solid #DDD;
-    box-shadow: -5 -5 #111;
+  overflow: hidden;
+  padding: 20px 10px;
+  position:fixed;
+  z-index:1;
+  top:0;
+  left:0;
+  width:100%;
+  margin-top:0;
+  background:#FAFFFF;
+  border-bottom:1px solid #DDD;
+  box-shadow: 5px 0px 5px #1112;
 }
 
-header nav {
-    display:flex;
-    flex-direction:row;
+/* Style the header links */
+header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
 }
 
-#aboutMe {
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+/* Change the background color on mouse-over */
+header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active/current link*/
+header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+/* Float the link section to the right */
+.header-right {
+  float: right;
+}
+
+.card {
+    margin-top:3em;
+    width:80%;
+    background:#FAFFFF;
     display: grid;
     grid-template-columns: 70% 1fr;
     grid-template-rows: repeat(3, auto);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-
-
-    padding-top:1em;
+    border: 2px solid #333;
+    border-radius: 2em;
+    box-shadow:5px 5px 5px #333;
+    padding: 1em 2em 1em 2em;
 }
 
 .blurb {
@@ -69,14 +105,27 @@ header nav {
     width: 200px;
     height: 200px;
     overflow: hidden;
+    border: 2px solid #333;
     border-radius: 50%;
-    box-shadow:-2px -5px 5px #111;
+    box-shadow:inset 5px 5px 5px #222;
+    margin-bottom:1em;
 }
 
 .portrait img {
     width: 100%;
     height: auto;
+    z-level:0;
     margin-top: -25px;
 }
 
-
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  header-right {
+    float: none;
+  }
+}
