--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -1,4 +1,4 @@
-
+/*Page Styles*/
 html {
     background:linear-gradient(to right, #a86b14, #c28d47);
     padding:0;
@@ -11,6 +11,12 @@ body {
     margin:0;
 }
 
+h1 {
+    font-size:2rem;
+    margin:0 0 1rem 0;
+}
+
+/*Header Styles*/
 /* Style the header with a grey background and some padding */
 header {
   overflow: hidden;
@@ -32,6 +38,7 @@ header a {
   color: black;
   text-align: center;
   padding: 12px;
+  margin-right:15px;
   text-decoration: none;
   font-size: 18px;
   line-height: 25px;
@@ -61,63 +68,6 @@ header a.active {
   float: right;
 }
 
-.card {
-    margin-top:3em;
-    width:80%;
-    background:#FAFFFF;
-    display: grid;
-    grid-template-columns: 70% 1fr;
-    grid-template-rows: repeat(3, auto);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    border: 2px solid #333;
-    border-radius: 2em;
-    box-shadow:5px 5px 5px #333;
-    padding: 1em 2em 1em 2em;
-}
-
-.blurb {
-    margin:0;
-    grid-area: 1/1/3/2;
-}
-
-.blurb h1 {
-    font-size:2rem;
-    margin:0;
-}
-
-.blurb p {
-    margin:0;
-}
-
-.bio {
-    grid-area: 3/1/4/3;
-    padding:0;
-}
-
-.bio p {
-    margin:0;
-}
-
-.portrait {
-    grid-area: 1/2/3/3;
-    display: inline-block;
-    width: 200px;
-    height: 200px;
-    overflow: hidden;
-    border: 2px solid #333;
-    border-radius: 50%;
-    box-shadow:inset 5px 5px 5px #222;
-    margin-bottom:1em;
-}
-
-.portrait img {
-    width: 100%;
-    height: auto;
-    z-level:0;
-    margin-top: -25px;
-}
-
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 @media screen and (max-width: 500px) {
   header a {
@@ -129,3 +79,110 @@ header a.active {
     float: none;
   }
 }
+
+/*Article Style------------------------------------------------------------------------*/
+article {
+    margin-top:3em;
+    width:80%;
+    background:#FAFFFF;
+    border: 2px solid #333;
+    border-radius: 2em;
+    box-shadow:5px 5px 5px #333;
+    padding: 1em 2em 1em 2em;
+}
+
+/*Bio Styles-------------------------------------------------------------------------*/
+
+#aboutMe p {
+  text-align: justify;
+  font-size: 1rem;
+}
+
+.portrait {
+    grid-area: 1/2/3/3;
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border: 2px solid #333;
+    border-radius: 50%;
+    box-shadow:inset 5px 5px 5px #222;
+    float: left;
+    margin: 1em;
+}
+
+.portrait img {
+    width: 100%;
+    height: auto;
+    z-level:0;
+    margin-top: -25px;
+}
+
+
+/*Projects Styles*/
+#projects a {
+  outline: none;
+  text-decoration: none;
+  padding: 2px 1px 0;
+}
+
+#projects a:link {
+  color: #000;
+}
+
+#projects a:visited {
+  color: #006;
+}
+
+#projects a:focus {
+  background: #c28d47;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+#projects a:hover {
+  background:#c28d47;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+#projects a:active {
+  background: #c28d47;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  color: #006;
+}
+
+.cards {
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  flex: 1 0 500px;
+  box-sizing: border-box;
+  margin: 1rem .25em;
+  border-radius:5px;
+}
+
+.card img {
+    border-radius: 5px 5px 0 0;
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+ 
+@media screen and (min-width: 40em) {
+    .card {
+       max-width: calc(50% -  1em);
+    }
+}
+ 
+@media screen and (min-width: 60em) {
+    .card {
+        max-width: calc(25% - 1em);
+    }
+}
+
